# RAG_Project

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/csv/: CRM-CRM.csv  Opportunities-All opportunities.csv  duplicated_risk_profile.csv  guest_list_export_2025-09-29 (1).csv  offersapirequestlogs-served-offers-api-log-d26dd769530b-2023-02-21-23-21-43.csv
data/excel/: CrossFire NCR NonConforming Report.xlsx  IATA - List of airports code by IATA airport code_20240601 (4).xlsx  MemberSummary (6).xlsx  Sample_Member_Upload (1).xlsx  correct data.xlsx
data/text_files/: arsenal.txt  keys.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  search.py  vector_store.py
